--- a/lista6.ipynb
+++ b/lista6.ipynb
@@ -16,9 +16,9 @@
    "id": "76926f19",
    "metadata": {},
    "source": [
-    "  * **Imię:** ...\n",
-    "  * **Nazwisko:** ...\n",
-    "  * **Numer indeksu:** ..."
+    "  * **Imię:** x\n",
+    "  * **Nazwisko:** x\n",
+    "  * **Numer indeksu:** x"
    ]
   },
   {
@@ -69,14 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "4076f649",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "779be697e6384151aa5a061e90868bf1",
+       "model_id": "cb4f1a55339146e8a7c8dc44a3a5a0b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,11 +112,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "eb82466d-97e1-4703-b86a-9c6d56f88988",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "@unittest.FunctionTestCase\n",
+    "def test_calkowite():\n",
+    "    assert max(-5, 10) == 10, \"Tu nigdy nie powinno być błędu\"\n",
+    "    assert max(7, 8) == 8, \"Tu nigdy nie powinno być błędu\"\n",
+    "    assert max(5, 5) == 5, \"Tu nigdy nie powinno być błędu\"\n",
+    "    assert max(-3, -4) == -3, \"Tu nigdy nie powinno być błędu\"\n",
+    "\n",
+    "@unittest.FunctionTestCase\n",
+    "def test_rzeczywiste():\n",
+    "    assert max(-5.3, 10.4) == 10.4, \"Tu nigdy nie powinno być błędu\"\n",
+    "    assert max(math.pi, math.e) == math.pi, \"Tu nigdy nie powinno być błędu\"\n",
+    "    assert max(5.123, 5.123) == 5.123, \"Tu nigdy nie powinno być błędu\"\n",
+    "    assert max(-3.1, -4.3) == -3.1, \"Tu nigdy nie powinno być błędu\"\n",
+    "\n",
+    "@unittest.FunctionTestCase\n",
+    "def test_mieszane():\n",
+    "    assert max(-5.3, 10) == 10, \"Tu nigdy nie powinno być błędu\"\n",
+    "    assert max(math.e, 0) == math.e, \"Tu nigdy nie powinno być błędu\"\n",
+    "    assert max(5, 5.01) == 5.01, \"Tu nigdy nie powinno być błędu\"\n",
+    "    assert max(-3, -4.3) == -3, \"Tu nigdy nie powinno być błędu\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,11 +149,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "4e8cd72f-46e7-4508-92d2-c0ddd03fef5e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "...\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 3 tests in 0.008s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "suite = unittest.TestSuite()\n",
+    "suite.addTest(test_calkowite)\n",
+    "suite.addTest(test_rzeczywiste)\n",
+    "suite.addTest(test_mieszane)\n",
+    "assert unittest.TextTestRunner().run(suite)"
+   ]
   },
   {
    "attachments": {},
@@ -149,11 +188,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "id": "f4281b8c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def dzien_julianski(D, M, R):\n",
+    "    if type(R) != int or R <= 0:\n",
+    "        raise ValueError(\"Rok musi być liczbą całkowitą większą od 0\")\n",
+    "    if type(M) != int or not (1 <= M <= 12):\n",
+    "        raise ValueError(\"Miesiąc musi być liczbą całkowitą od 1 do 12\")\n",
+    "    if type(D) != int or not (1 <= D <= 31):\n",
+    "        raise ValueError(\"Dzień musi być liczbą całkowitą od 1 do 31\")\n",
+    "    if (D == 31 and M in [2, 4, 6, 9, 11]) or (D == 30 and M == 2):\n",
+    "        raise ValueError(\"Podany dzień nie istnieje w podanym miesiącu\")\n",
+    "    if M == 2 and D == 29 and not ((R % 4 == 0 and R % 100 != 0) or R % 400 == 0):\n",
+    "        raise ValueError(\"Próbowano policzyć dzień juliański 29 lutego roku nieprzestępnego\")\n",
+    "    a = math.floor((14 - M)/12)\n",
+    "    y = R + 4800 - a\n",
+    "    m = M + 12*a - 3\n",
+    "    return D + math.floor((153*m+2)/5) + 365*y + math.floor(y/4) - math.floor(y/100) + math.floor(y/400) - 32045\n",
+    "\n",
+    "def ile_dni(data1, data2):\n",
+    "    if len(data1) != 3 or type(data1) != tuple:\n",
+    "        raise ValueError(\"Data (1) musi być 3 elementową krotką\")\n",
+    "    if len(data2) != 3 or type(data2) != tuple:\n",
+    "        raise ValueError(\"Data (2) musi być 3 elementową krotką\")\n",
+    "    return dzien_julianski(*data2) - dzien_julianski(*data1) # Wykonanie funkcji dzień juliański zgłosi pozostałe błędy\n",
+    "\n",
+    "# print(dzien_julianski(28, 2, 2023))\n",
+    "# print(ile_dni((4, 11, 2000), (31, 12, 2024)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,11 +234,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
    "id": "9f2e7d0a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def hiperkula(r, n):\n",
+    "    \"\"\"Funkcja obliczająca objętość hiperkuli.\n",
+    "    Dla dowolnej liczby rzeczywistej nieujemnej `r` oraz dodatniej liczby naturalnej `n`, funkcja zwraca objętość n-wymiarowej hiperkuli o promieniu r.\n",
+    "    >>> hiperkula(1, 2)\n",
+    "    3.141592653589793\n",
+    "    >>> hiperkula(0, 10)\n",
+    "    0.0\n",
+    "    >>> hiperkula(math.pi, 3)\n",
+    "    129.87878804533656\n",
+    "    >>> hiperkula(10*math.e, 3)\n",
+    "    84134.10032172385\n",
+    "    \"\"\"\n",
+    "    if (type(r) != int and type(r) != float) or r < 0:\n",
+    "        raise ValueError(\"r musi być nieujemną liczbą rzeczywistą\")\n",
+    "    if type(n) != int or n <= 0:\n",
+    "        raise ValueError(\"n musi być dodatnią liczbą naturalną\")\n",
+    "    return (math.pi**(n/2)/math.gamma(n/2+1))*(r**n)\n",
+    "\n",
+    "# print(hiperkula(1, 2))\n",
+    "# print(hiperkula(0, 10))\n",
+    "# print(hiperkula(math.pi, 3))\n",
+    "# print(hiperkula(10*math.e, 3))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,11 +273,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 172,
    "id": "f6866964-164c-4f25-8f52-cf41cdf0ef33",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=0, attempted=4)"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doctest.testmod()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -321,14 +422,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 11,
    "id": "05f76632-f2c5-43ce-ab9b-557ef929e87c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f65c6d589c554ef78cde88cec5f6b281",
+       "model_id": "0f721144838d4c1bbb38a9b8609c1048",
        "version_major": 2,
        "version_minor": 0
       },
@@ -336,7 +437,7 @@
        "VBox(children=(GridBox(children=(ToggleButtons(description='Pizza nr 1: ', options=('Okrągła', 'Prostokątna'),…"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,8 +445,10 @@
    "source": [
     "# plt.figure(figsize=(6, 6))\n",
     "\n",
+    "PIZZE = 3\n",
+    "\n",
     "items = []\n",
-    "for i in range(3):\n",
+    "for i in range(PIZZE):\n",
     "    items += eval(\n",
     "f'''\n",
     "\n",
@@ -359,15 +462,13 @@
     "'''.strip())\n",
     "\n",
     "zmienne = []\n",
-    "for i in range(3):\n",
+    "for i in range(PIZZE):\n",
     "    zmienne += eval(f'[(\"shape_{i}\", toggle_{i}), (\"par1_{i}\", val1_{i}), (\"par2_{i}\", val2_{i}), (\"cena_{i}\", val3_{i})]')\n",
     "zmienne = dict(zmienne)\n",
     "\n",
     "def refresh_output(**kwargs):\n",
     "    pizze = [\n",
-    "        {\"shape\": kwargs[\"shape_0\"], \"par1\": kwargs[\"par1_0\"], \"par2\": kwargs[\"par2_0\"], \"cena\": kwargs[\"cena_0\"]},\n",
-    "        {\"shape\": kwargs[\"shape_1\"], \"par1\": kwargs[\"par1_1\"], \"par2\": kwargs[\"par2_1\"], \"cena\": kwargs[\"cena_1\"]},\n",
-    "        {\"shape\": kwargs[\"shape_2\"], \"par1\": kwargs[\"par1_2\"], \"par2\": kwargs[\"par2_2\"], \"cena\": kwargs[\"cena_2\"]},\n",
+    "        {\"shape\": kwargs[f\"shape_{i}\"], \"par1\": kwargs[f\"par1_{i}\"], \"par2\": kwargs[f\"par2_{i}\"], \"cena\": kwargs[f\"cena_{i}\"]} for i in range(PIZZE)\n",
     "    ]\n",
     "    pola = []\n",
     "    ceny_cm2 = []\n",
